<resources>
    <string name="app_name">NortonApp</string>
    <string name="action_settings">Settings</string>
    <string name="antendimento">Atendimentos</string>
    <string name="assunto">Assunto</string>
    <string name="contato">Contato</string>
    <string name="telefone">Telefone</string>
    <string name="email">Email</string>
    <string name="tipo">Tipo Atendimento</string>
    <string name="data">Data</string>
    <string name="empresa">Empresa</string>
    <string name="empresas">Empresas</string>
    <string name="salvar">Salvar</string>
    <string name="atualizar">Atualizarr</string>
    <string name="cancelar">Cancelar</string>
    <string name="selecionar">Selecionar</string>
    <string name="title_activity_empresas">EmpresasActivity</string>
</resources>
